# eggin

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  graph_info.json
src/: Engine.cpp  Engine.hpp  Logger.cpp  Logger.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  main.cpp  resource.h
src/render/: Mesh.cpp  Mesh.hpp  Render.cpp  Render.hpp
src/utils/: ClassFactory.hpp  gameCommon.hpp
